# deepagents-hk

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  FINAL_FIX_SUMMARY.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  Install-Skills.ps1  README.md  RELEASE_NOTES.md  TESTING_GUIDE.md  docker-compose.yml  docker.env.example  install_skills.bat  mcp_config.json  pyproject.toml  供股列表.xlsx
.chainlit/: config.toml
chainlit/: app.py  auth_service.py  chainlit.md  config_models.py  config_storage.py  invite_admin.py  run.py
chainlit/.chainlit/: config.toml
chainlit/public/: custom.js  register.html  stylesheet.css
chainlit_data/: chat_history.db
docs/: API_RATE_LIMIT_HANDLING.md  CCASS_MCP_TESTING_GUIDE.md  HKEX_AGENT_USAGE.md  MERGE_EVALUATION_REPORT.md  PROMPT_IMPROVEMENT_PLAN.md  SELECTIVE_MERGE_PLAN.md  SKILLS_INTEGRATION_TEST_REPORT.md  SKILLS_MERGE_FINAL_STATUS.md  SKILLS_SYSTEM_MERGE_PLAN.md  SKILLS_USER_GUIDE.md  SYSTEM_IMPROVEMENT_RECOMMENDATIONS.md  UPSTREAM_MERGE_ANALYSIS.md  hkex-agent-用法示例.md  彩虹横幅配置说明.md
docs/执行报告/: 分支合并报告_2025-11-08_17-19-09.md
libs/deepagents/: graph.py
src/agents/: main_agent.py
src/api/: client.py
src/cli/: agent.py  agent_memory.py  commands.py  config.py  execution.py  file_ops.py  input.py  main.py  project_utils.py  token_utils.py  ui.py
src/hkex_agent/: README.md  pyproject.toml
src/hkex_agent/hkex_agent/: __init__.py
src/hkex_agent/hkex_agent/agents/: __init__.py  main_agent.py  subagents.py
src/hkex_agent/hkex_agent/api/: __init__.py  client.py
src/hkex_agent/hkex_agent/cli/: __init__.py  __main__.py  agent.py  agent_memory.py  commands.py  config.py  execution.py  file_ops.py  input.py  main.py  token_utils.py  tools.py  ui.py
src/hkex_agent/hkex_agent/services/: __init__.py  hkex_api.py  pdf_parser.py
src/hkex_agent/hkex_agent/tools/: __init__.py  hkex_tools.py  pdf_tools.py  summary_tools.py
web/: README.md  alembic.ini  docker-compose.yml  requirements.txt  start.sh
(+91 files in other folders)
